--- a/public/index.html
+++ b/public/index.html
@@ -26,4 +26,18 @@
   <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
   <script type="text/javascript" src="js/contact_me.js"></script> 
   <script type="text/javascript" src="js/main.js"></script>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+    navigator.serviceWorker.register('serviceWorker.js').then(function(registration){
+    // Registration was successful
+    console.log('ServiceWorker registration successful with scope: ', registration.scope)
+    }, function(err) {
+    // registration failed :(
+    console.log('ServiceWorker registration failed: ', err);
+    });
+    });
+    }
+    </script>
   </body>
