--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
     <title>SLD Electrical</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="SLD Electrical">
+      <meta name="keywords" content="electrical, contract, electrical contract ireland,wiring,power supply,electrician">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
